--- a/src/components/middleSectionCard/middleSectionCard.css
+++ b/src/components/middleSectionCard/middleSectionCard.css
@@ -46,10 +46,10 @@
   font-size: 0.9rem;
 }
 
-@media only screen and (min-width: 1020px) {
+@media only screen and (min-width: 1020px) and (max-width:1500px) {
   .card {
     width: 50%;
-    padding: 1rem 1.2rem;
+    padding: 0.7rem 0.9rem;
 
     gap: 0.5rem;
   }
