--- a/src/containers/middle/middle.css
+++ b/src/containers/middle/middle.css
@@ -5,14 +5,12 @@
   display: flex;
   flex-direction: column;
   padding: 1.2rem 2.4rem;
-  /* color: #fff; */
   font-family: poppins, sans-serif;
 }
 
 .middle-head {
   display: flex;
   justify-content: space-between;
-  /* color: white; */
 }
 
 .middle-head-left {
@@ -29,6 +27,7 @@
   padding: 0.4rem;
   background-color: #191b20;
   border-radius: 0.4rem;
+  color: #fff;
 }
 .middle-head-right-icon {
   width: 23px;
@@ -119,6 +118,7 @@
   background-color: #191b20;
   border-radius: 24px;
   margin: 1.2rem 0;
+  color: #fff;
 }
 .middle-card-1-left {
   display: flex;
@@ -156,6 +156,7 @@
 .middle-card-2 {
   display: flex;
   gap: 3%;
+  color: #fff;
   margin-bottom: 1.2rem;
 }
 
@@ -171,26 +172,25 @@
 }
 
 .middle-table-table {
-  height: 5.4rem;
+  height: 6rem;
   overflow-y: scroll;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
 }
 table {
   width: 100%;
-  height: 1rem;
   text-align: center;
-  overflow-y: auto;
   border-collapse: collapse;
+  height: 1.5rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-/* Hide scrollbar for Chrome, Safari and Opera */
-.middle-table-table::-webkit-scrollbar {
+
+table::-webkit-scrollbar {
   display: none;
 }
 
 thead {
   background-color: #191b20;
-  border-radius: 5px;
+  color: #808191;
 }
 tbody {
   background-color: rgba(36, 39, 49, 0.4);
@@ -199,28 +199,31 @@ th {
   font-size: 0.8rem;
   font-weight: 300;
   letter-spacing: 0.05rem;
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 0.8rem;
 }
 tr {
   border-radius: 5px;
-  padding: 0.5rem 1rem;
-  /* width: 100%; */
-  /* display: flex; */
-  /* justify-content: center; */
+}
+td {
+  padding: 0.3rem 0.3rem;
 }
 .table-asset {
   display: flex;
+  justify-content: center;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.8rem;
 }
 .table-asset-child {
   display: flex;
   width: 100%;
+  
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center; ;
+  
 }
-
+.table-asset-child h5{
+  text-align: start;
+}
 .table-asset-child-child {
   display: flex;
   justify-content: center;
@@ -234,16 +237,11 @@ tr {
   font-size: 0.6rem;
 }
 .table-asset-child-child-left {
-  width: 1rem;
-  height: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.table-asset-child-child-left img {
-  width: 100%;
-  height: 100%;
-}
+
 .table-asset-bottom {
   display: flex;
   gap: 0.5rem;
@@ -263,44 +261,84 @@ tr {
 @media only screen and (min-width: 1020px) and (max-width: 1500px) {
   .middle {
     width: 55%;
+    padding: 0.8rem 1.5rem;
   }
   .middle-banner {
-    margin-top: 1.2rem;
-    margin-right: 1rem;
+    margin-top: 0.7rem;
+    padding: 0.7rem 0.7rem;
   }
   .middle-banner-right {
-    /* position: static; */
-    top: 15px;
-    right: -10px;
+    position: static;
+    /* top: 15px;
+    right: -10px; */
   }
   .middle-card-1 {
     padding: 1rem 1rem;
     gap: 0;
     justify-content: space-between;
-    margin: 1.2rem 0;
+    margin: 0.8rem 0;
   }
   .middle-card-1-left {
-    gap: 0.3rem;
+    gap: 0.1rem;
   }
   .middle-card-1-left h4 {
     font-size: 1.1rem;
   }
-  .middle-card-1-left-tags {
-    display: flex;
-    gap: 0.5rem;
-    color: #fff;
-  }
-
   .middle-card-1-left-tags div {
     width: 5rem;
     text-align: center;
 
     padding: 0.2rem 0.3rem;
   }
-
   .middle-card-2 {
     display: flex;
-    gap: 3%;
-    margin-bottom: 1.2rem;
+    gap: 2%;
+    margin-bottom: 0.5rem;
+  }
+  
+  .middle-table-head {
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+  }
+  .middle-table-table {
+    height: 5.3rem;
+  }
+
+th {
+    font-size: 0.8rem;
+    font-weight: 300;
+    letter-spacing: 0.05rem;
+    padding: 0.5rem 0.5rem;
+  }
+
+  td {
+    padding: 0.2rem 0.2rem;
+  }
+
+  .table-asset-child {
+    font-size: 0.9rem;
+  }
+
+  .table-asset-child-child p {
+    font-size: 0.5rem;
+  }
+
+  .table-asset-bottom-left {
+    font-size: 0.7rem;
+  }
+  .table-amount {
+    font-size: 0.8rem;
+  }
+  .table-user {
+    font-size: 0.8rem;
+  }
+  .referral {
+    font-size: 0.7rem;
+  }
+  .table-amount-bottom {
+    font-size: 0.7rem;
+  }
+  .referral-bottom {
+    font-size: 0.7rem;
   }
 }
